manifests/gateway/gateway.yaml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: victor
spec:
  selector:
    istio: gateway
    app: istio-gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"

  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   hosts:
  #   - 'ridedott.com'
  #   - 'app1-svc.victor.svc.cluster.local'
    # tls:
    #   mode: SIMPLE
    #   serverCertificate: /etc/istio/ingressgateway-certs/-io-crt.pem
    #   privateKey: /etc/istio/ingressgateway-certs/-io-key.pem
