manifests/gateway/istio-virtual-svc.yaml
# See more at https://istio.io/blog/2017/0.1-canary/
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-virtual-svc
  namespace: victor
spec:
  hosts:
  - "*"


  gateways:
    - istio-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /app
    rewrite:
      uri: "/"

    route:
    - destination:
        host: app1-svc.victor.svc.cluster.local
        port: 
          number: 8080
        subset: app1-service-subset
      weight: 80
    - destination:
        host: app2-svc.victor.svc.cluster.local
        port: 
          number: 8080
        subset: app2-service-subset
      weight: 20
